Project charter modified according to MM 14102025

--- a/project_charter/Files/Justification.tex
+++ b/project_charter/Files/Justification.tex
@@ -8,7 +8,7 @@ Specifically, this new generation seeks to enable the aircraft to perform the wa
 
 The current work focuses on developing and validating such an algorithm through optimal control and numerical optimisation techniques. The approach aims to fill existing gaps in trajectory generation software for \gls{uas} by integrating non-standard operational constraints such as \gls{dem}, \gls{nfz}s, atmospheric conditions, and aircraft operational limits. Although not all these constraints will be implemented in the present study, they define the broader framework in which this research is embedded.
 
-The thesis will include the mathematical modelling of the water-drop manoeuvre and apply advanced optimal control strategies (e.g. \gls{lqr} or \gls{mpc}) to generate feasible flight paths. Furthermore, the algorithm will include a decision logic that evaluates the feasibility of each discharge mission based on operator-defined parameters (e.g., drop location, altitude, and heading) and the real-time state of the aircraft. This approach is relatively novel in the context of autonomous \gls{uas} firefighting operations.
+The thesis will include the mathematical modelling of the water-drop manoeuvre and apply optimisation on a path planning algorithm. Furthermore, the algorithm will include a decision logic that evaluates the feasibility of each discharge mission based on operator-defined parameters (e.g., drop location, altitude, and heading) and the real-time state of the aircraft. This approach is relatively novel in the context of autonomous \gls{uas} firefighting operations.
 
 Validation will be performed in a \gls{qhil} environment using the same autopilot as the real Flyox aircraft, ensuring consistency and reliability between simulation and physical systems. This contributes to the practical applicability of the results within Singular Aircraft’s future development roadmap.
 
