--- a/project_charter/Files/Scope.tex
+++ b/project_charter/Files/Scope.tex
@@ -16,38 +16,37 @@ This section includes a brief description of the work-packages this thesis addre
     
     \item \textbf{\gls{wp} 1. Literature review and theoretical background.}
     \begin{itemize}
-        \item State-of-the-art of trajectory optimisation concepts, actual commercial, open-source and academic software used in optimal trajectory computation.
+        \item State-of-the-art of trajectory optimisation concepts, actual commercial, open-source and academic software used in optimal path planning computation.
         \item Identification of the actual research gaps.
-        \item Theoretical background about the optimal control problem and the direct and indirect approaches used to solve it.
-        \item Theoretical background on gradient descent techniques to solve optimisation problems by the simplification of the problem to an adjoint problem.
+        \item Theoretical background about flight mechanics applied to bidimensional vertical plane restricted manoeuvres.
+        \item Theoretical background on open-source back-end solvers (p.e CasADi or ACADOS) for optimisation problems.
     \end{itemize}
-    \underline{\textbf{High-level deliverables:}} state-of-the-art of actual situation in trajectory optimisation problems and, a theoretical background on the optimal control problem, gradient descent techniques and the adjoint problem.
+    \underline{\textbf{High-level deliverables:}} state-of-the-art of actual situation in trajectory optimisation problems and path planning algorithms, a theoretical background on the flight mechanics equations and optimisation solvers.
 
     \item \textbf{\gls{wp} 2. Implementation of benchmark problems.}
     \begin{itemize}
-        \item Formulation of the flight mechanics associated to a vertical plane restricted flight trajectory and to a coordinated turn restricted in the horizontal plane.
-        \item Implementation and validation of a code that integrates the flight mechanics equations using a trapezoidal scheme in three different scenarios that would constitute the benchmark problems: a flight path that consists in an descent, cruise level-flight and an ascent; a restricted trajectory between two points A and B; a coordinated turn in an horizontal plane with a wind-field (adapted version of Zermelo's problem).
+        \item Formulation of the flight mechanics associated to a vertical plane restricted flight trajectory.
+        \item Implementation and validation of a code that integrates the flight mechanics equations and obtains trim conditions for different flight phases.
+        \item Implementation of the different benchmark problems considering a descent-cruise-ascent manoeuvre: manoeuvre with constant mass; manoeuvre with mass variation; manoeuvre with mass variation and \gls{dem}; manoeuvre with mass variation and \gls{nfz}; manoeuvre with mass variation and no calm wind conditions.
         \item Implementation of a function that transforms a continuos trajectory in a discretised set of points and converts those relative points in absolute \gls{gps} coordinates, given an initial absolute \gls{gps} point (i.e. flight plan generator function).
         \item Verification of the discretised solution with a real autopilot in a \gls{qhil} environment.
         \end{itemize}
-    \underline{\textbf{High-level deliverables:}} the code associated to the three defined benchmark problems and the flight plan generator function and, the conclusions about the validation and verification processes.
+    \underline{\textbf{High-level deliverables:}} the code associated to the defined benchmark problems and the flight plan generator function and, the conclusions about the validation and verification processes.
 
     \item \textbf{\gls{wp} 3. Implementation of the water-drop manoeuvre.}
     \begin{itemize}
-        \item Requirements of the stakeholders of the project.
-        \item Formulation of the flight mechanics associated to a vertical plane water-drop manoeuvre, including discontinuous weight of the \gls{uav} during discharge and the aircraft operational limits.
-        \item Pre-processing, when needed, and formulation of the different constraints mentioned: \gls{dem}, \gls{nfz} and wind conditions. \footnote{Notice that the detected obstacles will be treated as \gls{nfz} and, therefore, its definition is not necessary. When the \gls{uav} detects a new obstacle on its flight path, the algorithm will receive a set of coordinates to treat it as a new \gls{nfz} and then optimal trajectory will be re-computed.}
+        \item Formulation of the flight mechanics associated to a vertical plane water-drop manoeuvre, including discontinuous weight of the \gls{uav} during discharge and the aircraft operational limits (i.e problem definition).
+        \item Pre-processing, when needed, and formulation of the different constraints mentioned: \gls{dem}, \gls{nfz} and wind conditions \footnote{Notice that the detected obstacles will be treated as \gls{nfz} and, therefore, its definition is not necessary. When the \gls{uav} detects a new obstacle on its flight path, the algorithm will receive a set of coordinates to treat it as a new \gls{nfz} and then optimal trajectory will be re-computed.} (i.e constraints applied to the problem).
         \item Implementation and validation of a code capable of computing the optimal flight trajectory to perform the water-drop manoeuvre in a given set of initial conditions (aircraft dynamics and pre-defined constraints) and the \gls{gps} discharge point.
-        \item Implementation of changes, if needed, on the flight plan generator function and verification through \gls{qhil} for a minimum time flight trajectory.
+        \item Implementation of changes, if needed, on the flight plan generator function and verification through \gls{qhil}.
         \item Analysis of code performance for different set of constraints.
         \end{itemize}
     \underline{\textbf{High-level deliverables:}} the code associated to the water-drop manoeuvre, the flight plan generator function (if implemented changes). Conclusions about the validation and verification processes and code performance analysis.
 
     \item \textbf{\gls{wp} 4. Implementation of a GO/NO-GO logic.}
     \begin{itemize}
-        \item Implementation of a GO/NO-GO logic based on obtaining all the vertical plane flight trajectories for a set of headings and the actual dynamics of the aircraft.
+        \item Implementation of a GO/NO-GO logic based on obtaining all the vertical plane flight trajectories for a set of headings and the actual dynamics of the aircraft or, for a set of operations theatre dimensions and the actual dynamics of the aircraft.
         \item Representation of all the plane associated trajectories in green (GO) or red (NO-GO) based on the aircraft actual dynamics.
-        \item Implementation of a function that choices the most suitable trajectory to descent, discharge and ascent safely within the aircraft operational limits.
         \item Analysis of code performance.
         \end{itemize}
     \underline{\textbf{High-level deliverables:}} the code associated to GO/NO-GO logic, the flight plan generator function (if implemented changes). Conclusions about the verification process and code performance analysis.
