--- a/report/packages.tex
+++ b/report/packages.tex
@@ -11,6 +11,7 @@
 \usepackage{glossary-long}
 \usepackage[scaled]{helvet} 
 \usepackage[table]{xcolor}
+\usepackage{color}
 \definecolor{RoyalBlue}{RGB}{65,105,225}
 \usepackage{tikz}
 \usepackage{titlesec}
