--- a/report/packages.tex
+++ b/report/packages.tex
@@ -26,7 +26,8 @@
     headsep=0.75cm
 }
 \usepackage{graphicx}           
-\usepackage{fancyhdr}           
+\usepackage{fancyhdr}    
+\usepackage{amssymb}       
 \usepackage{parskip}
 \setlength{\parskip}{0.8em}     
 \setlength{\parindent}{0pt}     
