--- a/report/main.tex
+++ b/report/main.tex
@@ -44,7 +44,7 @@
   \setglossarystyle{long3col}
   \renewenvironment{theglossary}%
     {\begin{longtable}{@{}l p{0.7\textwidth} r@{}}
-     \rmfamily\bfseries Symbol & \rmfamily\bfseries Description & \rmfamily\bfseries Unit \\ \hline
+     \rmfamily\bfseries Symbol & \rmfamily\bfseries Description & \rmfamily\bfseries Units \\ \hline
      \endhead}%
     {\end{longtable}}
   
