--- a/report/packages.tex
+++ b/report/packages.tex
@@ -27,7 +27,11 @@
 }
 \usepackage{graphicx}           
 \usepackage{fancyhdr}    
-\usepackage{amssymb}       
+\usepackage{amssymb}   
+\usepackage{amsmath}   
+\usepackage{float} 
+\usepackage{caption}
+\captionsetup{labelfont=bf}
 \usepackage{parskip}
 \setlength{\parskip}{0.8em}     
 \setlength{\parindent}{0pt}     
