Ch2. Writing and spelling review finished. #4

--- a/report/packages.tex
+++ b/report/packages.tex
@@ -28,7 +28,9 @@
 \usepackage{graphicx}           
 \usepackage{fancyhdr}    
 \usepackage{amssymb}   
-\usepackage{amsmath}   
+\usepackage{amsmath} 
+\usepackage{algorithm}
+\usepackage{algorithmic}  
 \usepackage{float} 
 \usepackage{caption}
 \captionsetup{labelfont=bf}
@@ -38,3 +40,28 @@
 \usepackage{wrapfig}            
 \usepackage[style=ieee, sorting=none, backend=biber]{biblatex} 
 \addbibresource{references.bib}
+\usepackage{listings}
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\small,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2,
+    language=Python
+}
+\lstset{style=mystyle}
