--- a/report/references.bib
+++ b/report/references.bib
@@ -1,14 +1,191 @@
-@book{2025,
-  author    = {John Doe},
-  title     = {A Dummy Book for Testing},
-  publisher = {Test Publisher},
-  year      = {2025},
-  edition   = {1st}
+@book{Courant1953,
+  author    = {R. Courant and D. Hilbert},
+  title     = {Methods of Mathematical Physics},
+  volume    = {I},
+  publisher = {John Wiley \& Sons},
+  year      = {1953},
+  address   = {New York, NY, USA},
+  isbn      = {0-471-50447-5}
 }
 
-@article{example2020,
-  author = {Doe, John},
-  title = {An Example Article},
-  journal = {Journal of Examples},
-  year = {2020},
+@inbook{Kirk2004,
+  author    = {E. D. Kirk},
+  title     = {Optimal Control Theory: An Introduction},
+  chapter   = {1},
+  pages     = {3--28},
+  publisher = {Dover Publications},
+  year      = {2004},
+  address   = {Mineola, NY, USA},
+  isbn      = {0-486-43484-2}
+}
+
+@electronic{Blasjo2021,
+  author    = {V. Bl{\aa}sj{\"o}},
+  title     = {Galileo, ignoramus: Mathematics versus philosophy in the scientific revolution},
+  year      = {2021},
+  url       = {https://doi.org/10.48550/arXiv.2102.06595},
+  note      = {arXiv:2102.06595 [math.HO]}
+}
+
+@article{Bernoulli1696,
+  author    = {J. Bernoulli},
+  title     = {Problema novum ad ejus solutionem {M}athematica invitantur},
+  journal   = {Acta Eruditorum},
+  year      = {1696},
+  pages     = {269},
+  note      = {18th ed.}
+}
+
+@inbook{Betts2010,
+  author    = {J. T. Betts},
+  title     = {Practical Methods for Optimal Control and Estimation Using Nonlinear Programming},
+  edition   = {2nd},
+  chapter   = {4},
+  pages     = {199--205},
+  publisher = {SIAM},
+  year      = {2010},
+  address   = {Philadelphia, PA, USA},
+  isbn      = {978-0-89871-688-7}
+}
+
+@electronic{IllinoisRobotics,
+  author    = {{Illinois Robotics Systems}},
+  title     = {Section {IV}: Dynamics and Control},
+  booktitle = {Chapter 17: Optimal Control (Section 1)},
+  organization = {Intelligent Motion Lab},
+  url       = {https://motion.cs.illinois.edu/RoboticSystems/Book.html},
+  note      = {Accessed Dec. 23, 2025}
+}
+
+@book{BrysonHo1975,
+  author    = {A. E. Bryson and Y. C. Ho},
+  title     = {Applied Optimal Control: Optimization, Estimation, and Control},
+  publisher = {Hemisphere Publishing Corp},
+  year      = {1975},
+  address   = {Washington, DC, USA}
+}
+
+@inbook{Bohme2017,
+  author    = {J. T. B{\"o}hme and B. Frank},
+  title     = {Hybrid Systems, Optimal Control and Hybrid Vehicles: Theory, Methods and Applications},
+  edition   = {1st},
+  chapter   = {8},
+  pages     = {245--247},
+  publisher = {Springer},
+  year      = {2017},
+  address   = {Cham, Switzerland},
+  isbn      = {978-3-319-51316-4}
+}
+
+@unpublished{Jackson2018,
+  author    = {B. Jackson},
+  title     = {Exploring quadrature rules in direct collocation methods for trajectory optimization},
+  note      = {Principles of optimal control (AA203). Accessed Dec. 23, 2025},
+  year      = {2018},
+  url       = {https://bjack205.github.io/assets/AA203_project.pdf}
+}
+
+@incollection{Becerra2012,
+  author    = {V. M. Becerra},
+  title     = {Practical Direct Collocation Methods for Computational Optimal Control},
+  booktitle = {Modeling and Optimization in Space Engineering},
+  editor    = {G. Fasano and J. D. Pint{\'e}r},
+  publisher = {Springer},
+  year      = {2012},
+  pages     = {33--60},
+  doi       = {10.1007/978-1-4614-4469-5_2}
+}
+
+@article{Stryk1992,
+  author    = {O. von Stryk and R. Bulirsch},
+  title     = {Direct and indirect methods for trajectory optimization},
+  journal   = {Ann. Oper. Res.},
+  volume    = {37},
+  number    = {1--4},
+  pages     = {357--373},
+  year      = {1992},
+  doi       = {10.1007/BF02071065}
+}
+
+@incollection{Leonard1992,
+  author    = {D. L{\'e}onard and N. van Long},
+  title     = {Endpoint constraints and transversality conditions},
+  booktitle = {Optimal Control Theory and Static Optimization in Economics},
+  pages     = {221--262},
+  publisher = {Cambridge Univ. Press},
+  year      = {1992},
+  address   = {Cambridge, UK}
+}
+
+@misc{Chachuat2009,
+  author    = {B. Chachuat},
+  title     = {Optimal Control: Lecture 28—{I}ndirect solution methods},
+  howpublished = {PowerPoint slides, Dept. Chem. Eng., McMaster Univ.},
+  year      = {2009},
+  note      = {Accessed Dec. 23, 2025},
+  url       = {https://www.epfl.ch/labs/la/wp-content/uploads/2018/08/Slides28.pdf}
+}
+
+@electronic{UCLCalcVar,
+  author    = {{University College London}},
+  title     = {The {Euler-Lagrange} Equation, or {Euler’s} Equation},
+  url       = {https://www.ucl.ac.uk/~ucahmto/latex_html/chapter2_latex2html/node5.html},
+  note      = {Accessed Dec. 23, 2025}
+}
+
+@misc{GordonTibshirani,
+  author    = {G. Gordon and R. Tibshirani},
+  title     = {{Karush-Kuhn-Tucker} conditions},
+  howpublished = {PowerPoint slides, School of Comput. Sci., Carnegie Mellon Univ.},
+  note      = {Accessed Dec. 23, 2025},
+  url       = {http://www.cs.cmu.edu/~ggordon/10725-F12/slides/}
+}
+
+@techreport{ColumbiaPMP,
+  author    = {{Columbia University}},
+  title     = {10. {Pontryagin’s} Minimum Principle},
+  institution = {Columbia Univ.},
+  type        = {Lecture Notes},
+  year        = {2018},
+  note        = {Accessed Dec. 23, 2025},
+  url         = {https://blogs.cuit.columbia.edu/zp2130/files/2019/03/Lecture10_Pontryagins-Minimum-Principle.pdf}
+}
+
+@inbook{BrysonHo1975_Blaisdell,
+  author    = {A. E. Bryson and Y. C. Ho},
+  title     = {Applied Optimal Control: Optimization, Estimation and Control},
+  pages     = {1--39},
+  publisher = {Blaisdell},
+  year      = {1975},
+  address   = {Waltham, MA, USA},
+  isbn      = {0-89116-228-3}
+}
+
+@techreport{Waechter2004,
+  author      = {A. W{\"a}chter and L. T. Biegler},
+  title       = {On the Implementation of an Interior-Point Filter Line-Search Algorithm for Large-Scale Nonlinear Programming},
+  institution = {Optimization Online},
+  year        = {2004},
+  url         = {https://optimization-online.org/wp-content/uploads/2004/03/836.pdf},
+  note        = {Accessed Dec. 23, 2025}
+}
+
+@article{Fletcher2002,
+  author    = {R. Fletcher and S. Leyffer},
+  title     = {Nonlinear programming without a penalty function},
+  journal   = {Math. Program.},
+  volume    = {91},
+  number    = {2},
+  pages     = {239--269},
+  year      = {2002},
+  doi       = {10.1007/s101070100244}
+}
+
+@Article{Andersson2018,
+  Author = {Joel A E Andersson and Joris Gillis and Greg Horn
+            and James B Rawlings and Moritz Diehl},
+  Title = {{CasADi} -- {A} software framework for nonlinear optimization
+           and optimal control},
+  Journal = {Mathematical Programming Computation},
+  Year = {2018},
 }
