Ch2 and 3. Writing. #4

--- a/report/main.tex
+++ b/report/main.tex
@@ -126,6 +126,7 @@
 \pagestyle{fancy}
 \pagenumbering{arabic}
 \input{chapters/ch2_fundamentals_oc.tex}
+\input{chapters/ch3_benchmark.tex}
 
 % REFERENCES
 \printbibliography[heading=bibintoc,title={References}]
