--- a/report/packages.tex
+++ b/report/packages.tex
@@ -29,6 +29,7 @@
 \usepackage{fancyhdr}    
 \usepackage{amssymb}   
 \usepackage{amsmath} 
+\usepackage{mathtools}
 \usepackage{algorithm}
 \usepackage{algorithmic}  
 \usepackage{float} 
