--- a/report/references.bib
+++ b/report/references.bib
@@ -189,3 +189,12 @@
   Journal = {Mathematical Programming Computation},
   Year = {2018},
 }
+
+@book{stengel1994optimal,
+  title     = {Optimal Control and Estimation},
+  author    = {Stengel, Robert F.},
+  year      = {1994},
+  publisher = {Dover Publications},
+  address   = {New York, NY, USA},
+  isbn      = {978-0486682006}
+}
