--- a/report/main.tex
+++ b/report/main.tex
@@ -59,6 +59,7 @@
   }
 }
 
+\glsaddall[types={\acronymtype}]
 \glsaddall[types={symbolslist}]
 
 \setglossarystyle{list}
@@ -133,6 +134,8 @@
 \pagenumbering{arabic}
 \input{chapters/ch2_fundamentals_oc.tex}
 \input{chapters/ch3_benchmark.tex}
+\input{chapters/ch4_problem_definition.tex}
+\input{chapters/ch5_problem_results.tex}
 
 % REFERENCES
 \printbibliography[heading=bibintoc,title={References}]
