Nomenclature solved. Appendix A added.

--- a/report/main.tex
+++ b/report/main.tex
@@ -141,5 +141,6 @@
 \printbibliography[heading=bibintoc,title={References}]
 
 % APPENDICES
-
+\appendix
+\input{chapters/A_Gamma_Dot.tex}
 \end{document}
