Minor changes on header.

--- a/report/main.tex
+++ b/report/main.tex
@@ -15,8 +15,8 @@
 \fancyhead[R]{
     \small\rmfamily\bfseries 
     \begin{tabular}[b]{r@{}}
-        Real-Time Optimal Trajectory \\ 
-        Generation for Fixed-Wing UAVs
+        A.Campillo "Real-Time Optimal Trajectory \\ 
+        Generation for Fixed-Wing UAVs" 
     \end{tabular}
 }
 \fancyfoot[C]{\small\rmfamily\thepage}
@@ -141,6 +141,14 @@
 \printbibliography[heading=bibintoc,title={References}]
 
 % APPENDICES
+\newpage
+\thispagestyle{empty}
+\vspace*{\fill}
+\begin{center}
+    \Huge \textbf{Appendices}
+\end{center}
+\vfill
+\newpage
 \appendix
 \input{chapters/A_Gamma_Dot.tex}
 \end{document}
