SNG logo added.

--- a/report/main.tex
+++ b/report/main.tex
@@ -11,7 +11,7 @@
 \setlength{\headheight}{46pt} 
 \addtolength{\topmargin}{-4pt}
 
-\fancyhead[L]{\includegraphics[width=5cm]{images/default/logo_UPC_header.png}}
+\fancyhead[L]{\includegraphics[width=5cm]{images/default/logo_UPC_header.png}\includegraphics[width=1.3cm]{images/default/singular_aircraft_ltd_logo.jpeg}}
 \fancyhead[R]{
     \small\rmfamily\bfseries 
     \begin{tabular}[b]{r@{}}
