--- a/report/main.tex
+++ b/report/main.tex
@@ -124,9 +124,13 @@
 % TABLES OF CONTENTS, FIGURES AND TABLES
 \tableofcontents
 \listoffigures
+\addcontentsline{toc}{chapter}{List of Figures}
 \listoftables
-\printglossary[type=\acronymtype, title=Acronyms, style=list]
+\addcontentsline{toc}{chapter}{List of Tables}
+\printglossary[type=\acronymtype, style=mcolindex, title=Acronyms]
+\addcontentsline{toc}{chapter}{Acronyms}
 \printglossary[type=symbolslist, style=nomenclaturestyle]
+\addcontentsline{toc}{chapter}{Nomenclature}
 \newpage
 
 % MAIN CONTENT
