--- a/report/packages.tex
+++ b/report/packages.tex
@@ -1,7 +1,8 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{lmodern}
-\usepackage[acronym, symbols, nomain, nonumberlist]{glossaries}
+\usepackage[toc, acronym, symbols, nomain, nonumberlist]{glossaries}
+\usepackage{glossary-mcols}
 \usepackage{hyperref}
 \hypersetup{
     hidelinks,           
