Ch4. Finished. General review.  Annex B file added.

--- a/report/main.tex
+++ b/report/main.tex
@@ -128,9 +128,7 @@
 \listoftables
 \addcontentsline{toc}{chapter}{List of Tables}
 \printglossary[type=\acronymtype, style=mcolindex, title=Acronyms]
-\addcontentsline{toc}{chapter}{Acronyms}
 \printglossary[type=symbolslist, style=nomenclaturestyle]
-\addcontentsline{toc}{chapter}{Nomenclature}
 \newpage
 
 % MAIN CONTENT
@@ -155,4 +153,5 @@
 \newpage
 \appendix
 \input{chapters/A_Gamma_Dot.tex}
+\input{chapters/B_Code.tex}
 \end{document}
