--- a/report/main.tex
+++ b/report/main.tex
@@ -152,6 +152,7 @@
 \vfill
 \newpage
 \appendix
-\input{chapters/A_Gamma_Dot.tex}
-\input{chapters/B_Code.tex}
+\input{chapters/AppA_Gamma_Dot.tex}
+\input{chapters/AppB_Code.tex}
+\input{chapters/AppC_Aircraft_Parameters.tex}
 \end{document}
