Preface done. Pending to review.

--- a/report/main.tex
+++ b/report/main.tex
@@ -115,6 +115,7 @@
 \restoregeometry
 
 %% - DOCUMENT - %%
+\pagestyle{plain}
 \pagenumbering{roman}
 % INTRODUCTORY CHAPTERS
 \input{chapters/abstract}
