--- a/report/references.bib
+++ b/report/references.bib
@@ -198,3 +198,29 @@
   address   = {New York, NY, USA},
   isbn      = {978-0486682006}
 }
+
+@misc{FAOFireStats2023,
+  author       = {{Food and Agriculture Organization of the United Nations}},
+  title        = {Global Forest Fire Assessment 2023},
+  year         = {2023},
+  url          = {https://www.fao.org/forest-resources-assessment/fire/en/},
+  note         = {Accessed: Jan. 2, 2026}
+}
+
+@article{UAVFireSuppression2022,
+  author       = {Restas, Agoston},
+  title        = {Drone Applications for Wildfire Management: From Detection to Suppression},
+  journal      = {Fire Technology},
+  year         = {2022},
+  volume       = {58},
+  number       = {3},
+  pages        = {1011--1036},
+  doi          = {10.1007/s10694-021-01169-9}
+}
+
+@misc{SingularWeb,
+  author       = {{Singular Aircraft S.L.}},
+  title        = {Flyox I -- The World's Largest Civilian {UAV}},
+  url          = {https://singularaircraft.com/},
+  note         = {Accessed: Jan. 2, 2026}
+}
