Gitignore svg output. Ch5 Beginning.

--- a/report/packages.tex
+++ b/report/packages.tex
@@ -79,3 +79,9 @@
     commentstyle=\color{codegreen},
 }
 \usepackage{appendix}
+\usepackage{svg}
+\svgsetup{
+    inkscapeexe={/usr/bin/inkscape},
+    inkscapeversion=1,
+    extractpath=./svg-extract/ % Forces LaTeX to create a dedicated folder for the PDFs
+}
