--- a/report/packages.tex
+++ b/report/packages.tex
@@ -85,3 +85,4 @@
     inkscapeversion=1,
     extractpath=./svg-extract/ % Forces LaTeX to create a dedicated folder for the PDFs
 }
+\usepackage{subcaption}
