--- a/report/main.tex
+++ b/report/main.tex
@@ -43,12 +43,11 @@
 \newglossarystyle{nomenclaturestyle}{
   \setglossarystyle{long3col}
   \renewenvironment{theglossary}%
-    {\begin{longtable}{@{}l p{0.65\textwidth} r@{}}
+    {\begin{longtable}{@{} p{0.18\textwidth} p{0.62\textwidth} >{\raggedleft\arraybackslash}p{0.15\textwidth} @{}}
      \rmfamily\bfseries Symbol & \rmfamily\bfseries Description & \rmfamily\bfseries Units \\ [1ex]
      \hline 
      \noalign{\vspace{6pt}}
-     % Corrected Notation Note: Using multicolumn to avoid the \cr error
-     \multicolumn{3}{@{}l}{\small\textit{Note: Bold symbols denote vectors; dotted symbols denote time-derivatives ($\dot{x} = dx/dt$).}} \\ [2ex]
+     \multicolumn{3}{@{}l}{\small\textit{Note: Bold symbols denote vectors; dotted symbols denote time-derivatives.}} \\ [2ex]
      \endhead}%
     {\end{longtable}}
   
