--- a/report/packages.tex
+++ b/report/packages.tex
@@ -86,3 +86,4 @@
     extractpath=./svg-extract/ % Forces LaTeX to create a dedicated folder for the PDFs
 }
 \usepackage{subcaption}
+\usepackage{array}
