--- a/report/references.bib
+++ b/report/references.bib
@@ -224,3 +224,81 @@
   url          = {https://singularaircraft.com/},
   note         = {Accessed: Jan. 2, 2026}
 }
+
+@online{astos2024,
+  author = {{ASTOS Solutions GmbH}},
+  title = {ASTOS - Analysis, Simulation and Trajectory Optimization Software},
+  year = {2024},
+  url = {https://www.astos.de/products/astos},
+  urldate = {2026-01-06},
+  note = {Online}
+}
+
+@inproceedings{rosmann2006,
+  author = {Rösmann, T. and Berning, T. and Werner, R.},
+  title = {Trajectory Simulations, Qualitative Analyses and Differential Flatness of Constrained Systems},
+  booktitle = {AIP Conference Proceedings},
+  year = {2006},
+  volume = {830},
+  number = {1},
+  pages = {522--529},
+  doi = {10.1063/1.2203055},
+  url = {https://pubs.aip.org/aip/acp/article-abstract/830/1/522/998549},
+  note = {Online}
+}
+
+@inproceedings{hargreaves2012,
+  author = {Hargreaves, C. and Paris, S. and Lases, W.},
+  title = {OTIS past, present and future},
+  booktitle = {AIAA Atmospheric Flight Mechanics Conference},
+  year = {2012},
+  month = {aug},
+  doi = {10.2514/6.1992-4530},
+  url = {https://arc.aiaa.org/doi/10.2514/6.1992-4530},
+  note = {Online}
+}
+
+@techreport{salguero1995taos,
+  author      = {Salguero, David E.},
+  title       = {Trajectory Analysis and Optimization System (TAOS) User's Manual},
+  institution = {Sandia National Laboratories},
+  address     = {Albuquerque, New Mexico, United States},
+  year        = {1995},
+  number      = {SAND-95-1652},
+  doi         = {10.2172/162896},
+  url         = {https://www.osti.gov/biblio/162896},
+  urldate     = {2026-01-06},
+  note        = {Online}
+}
+
+@online{becerra2010psopt,
+  author = {Becerra, Victor M.},
+  title = {PSOPT – An Open Source Optimal Control Solver for C++},
+  year = {2010},
+  url = {https://www.psopt.net/home},
+  urldate = {2026-01-06},
+  note = {Online}
+}
+
+@article{houska2011acado,
+  author  = {Houska, B. and Ferreau, H. J. and Diehl, M.},
+  title   = {ACADO Toolkit: An Open Source Framework for Automatic Control and Dynamic Optimization},
+  journal = {Optimal Control Applications and Methods},
+  volume  = {32},
+  number  = {3},
+  pages   = {298--312},
+  year    = {2011},
+  doi     = {10.1002/oca.939}
+}
+
+@article{sun2020openap,
+  author  = {Sun, J. and Ellerbroek, J. and Hoekstra, J.},
+  title   = {OpenAP: An Open-source Aircraft Performance Model in Python},
+  journal = {Aerospace},
+  volume  = {7},
+  number  = {8},
+  pages   = {104},
+  year    = {2020},
+  doi     = {10.3390/aerospace7080104},
+  note    = {Reference for the underlying OpenAP framework used by OpenAP.opt}
+}
