--- a/report/references.bib
+++ b/report/references.bib
@@ -302,3 +302,32 @@
   doi     = {10.3390/aerospace7080104},
   note    = {Reference for the underlying OpenAP framework used by OpenAP.opt}
 }
+
+@online{msi2024modern,
+  author = {{MSI}},
+  title = {Modern 15 A5SX - Specification},
+  year = {2024},
+  url = {https://es.msi.com/Business-Productivity/Modern-15-A5SX/Specification},
+  urldate = {2026-01-06},
+  note = {Online}
+}
+
+@online{apple2024ipad,
+  author = {{Apple Inc.}},
+  title = {iPad Air - Especificaciones técnicas},
+  year = {2024},
+  url = {https://www.apple.com/ipad-air/specs/},
+  urldate = {2026-01-06},
+  note = {Online}
+}
+
+@online{occc2025mix,
+  author = {{Oficina Catalana del Canvi Climàtic}},
+  title = {Factor de emisión de la energía eléctrica: el mix eléctrico},
+  year = {2025},
+  organization = {Generalitat de Catalunya},
+  url = {http://canviclimatic.gencat.cat/es/actua/factors_demissio_associats_a_lenergia/},
+  urldate = {2026-01-06},
+  language = {spanish},
+  note = {Online}
+}
